wrappingPlanners/Neoclassical-Planning/Graphplan/SGplan/seq-sat-sgplan6/Metric-FF/scan-ops_pddl.output
Terminals unused in grammar

   IMPLIES_TOK
   TIME_TOK
   PLUS_TOK
   MUL_TOK
   DIV_TOK
   UMINUS


状态 169 conflicts: 1 shift/reduce
状态 385 conflicts: 3 shift/reduce
状态 387 conflicts: 2 shift/reduce
状态 389 conflicts: 2 shift/reduce
状态 391 conflicts: 2 shift/reduce
状态 393 conflicts: 1 shift/reduce
状态 395 conflicts: 1 shift/reduce
状态 397 conflicts: 1 shift/reduce
状态 399 conflicts: 1 shift/reduce
状态 401 conflicts: 1 shift/reduce


语法

    0 $accept: file $end

    1 $@1: %empty

    2 file: $@1 domain_definition

    3 $@2: %empty

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name $@2 optional_domain_defs

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME CLOSE_PAREN

    6 optional_domain_defs: CLOSE_PAREN
    7                     | require_def optional_domain_defs
    8                     | constants_def optional_domain_defs
    9                     | types_def optional_domain_defs
   10                     | predicates_def optional_domain_defs
   11                     | functions_def optional_domain_defs
   12                     | action_def optional_domain_defs
   13                     | durative_action_def optional_domain_defs
   14                     | derived_def optional_domain_defs

   15 $@3: %empty

   16 predicates_def: OPEN_PAREN PREDICATES_TOK predicates_list $@3 CLOSE_PAREN

   17 predicates_list: %empty

   18 $@4: %empty

   19 predicates_list: OPEN_PAREN NAME typed_list_variable CLOSE_PAREN $@4 predicates_list

   20 $@5: %empty

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK functions_list $@5 CLOSE_PAREN

   22 functions_list: atomic_function_skeleton_plus MINUS_TOK NAME functions_list
   23               | atomic_function_skeleton_plus
   24               | %empty

   25 atomic_function_skeleton_plus: OPEN_PAREN NAME typed_list_variable CLOSE_PAREN atomic_function_skeleton_plus
   26                              | OPEN_PAREN NAME typed_list_variable CLOSE_PAREN

   27 $@6: %empty

   28 $@7: %empty

   29 require_def: OPEN_PAREN REQUIREMENTS_TOK $@6 NAME $@7 require_key_star CLOSE_PAREN

   30 require_key_star: %empty

   31 $@8: %empty

   32 require_key_star: NAME $@8 require_key_star

   33 $@9: %empty

   34 types_def: OPEN_PAREN TYPES_TOK $@9 typed_list_name CLOSE_PAREN

   35 $@10: %empty

   36 constants_def: OPEN_PAREN CONSTANTS_TOK $@10 typed_list_name CLOSE_PAREN

   37 $@11: %empty

   38 $@12: %empty

   39 action_def: OPEN_PAREN ACTION_TOK $@11 NAME $@12 param_def action_def_body CLOSE_PAREN

   40 param_def: %empty
   41          | PARAMETERS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN

   42 action_def_body: %empty
   43                | VARS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN action_def_body

   44 $@13: %empty

   45 action_def_body: PRECONDITION_TOK pre_GD $@13 action_def_body

   46 $@14: %empty

   47 action_def_body: EFFECT_TOK adl_effect $@14 action_def_body

   48 pre_GD: OPEN_PAREN CLOSE_PAREN
   49       | pref_GD
   50       | OPEN_PAREN dis_AND_TOK pre_GD_star CLOSE_PAREN
   51       | OPEN_PAREN Fdis_ORdis_ALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN pre_GD CLOSE_PAREN

   52 pre_GD_star: %empty
   53            | pre_GD pre_GD_star

   54 pref_GD: adl_goal_description1

   55 derived_def: OPEN_PAREN DERIVED_TOK OPEN_PAREN predicate typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN

   56 adl_goal_description: adl_goal_description1
   57                     | OPEN_PAREN dis_AND_TOK adl_goal_description_star CLOSE_PAREN
   58                     | OPEN_PAREN Fdis_ORdis_ALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_goal_description1 CLOSE_PAREN

   59 adl_goal_description1: OPEN_PAREN LE_TOK f_exp f_exp CLOSE_PAREN
   60                      | OPEN_PAREN LEQ_TOK f_exp f_exp CLOSE_PAREN
   61                      | OPEN_PAREN EQ_TOK f_exp f_exp CLOSE_PAREN
   62                      | OPEN_PAREN GEQ_TOK f_exp f_exp CLOSE_PAREN
   63                      | OPEN_PAREN GE_TOK f_exp f_exp CLOSE_PAREN
   64                      | literal_term
   65                      | OPEN_PAREN dis_OR_TOK adl_goal_description_star CLOSE_PAREN
   66                      | OPEN_PAREN dis_NOT_TOK adl_goal_description CLOSE_PAREN
   67                      | OPEN_PAREN IMPLY_TOK adl_goal_description adl_goal_description CLOSE_PAREN
   68                      | OPEN_PAREN dis_EXISTS_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN

   69 adl_goal_description_star: %empty
   70                          | adl_goal_description adl_goal_description_star

   71 adl_effect: OPEN_PAREN ASSIGN_TOK f_head f_exp CLOSE_PAREN
   72           | OPEN_PAREN SCALE_UP_TOK f_head f_exp CLOSE_PAREN
   73           | OPEN_PAREN SCALE_DOWN_TOK f_head f_exp CLOSE_PAREN
   74           | OPEN_PAREN INCREASE_TOK f_head f_exp CLOSE_PAREN
   75           | OPEN_PAREN DECREASE_TOK f_head f_exp CLOSE_PAREN
   76           | literal_term
   77           | OPEN_PAREN dis_AND_TOK adl_effect_star CLOSE_PAREN
   78           | OPEN_PAREN Fdis_ORdis_ALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN adl_effect CLOSE_PAREN
   79           | OPEN_PAREN dis_WHEN_TOK adl_goal_description adl_effect CLOSE_PAREN

   80 adl_effect_star: %empty
   81                | adl_effect adl_effect_star

   82 f_head: OPEN_PAREN NAME term_star CLOSE_PAREN

   83 f_exp: NUM
   84      | f_head
   85      | OPEN_PAREN MINUS_TOK f_exp CLOSE_PAREN
   86      | OPEN_PAREN AD_TOK f_exp f_exp CLOSE_PAREN
   87      | OPEN_PAREN MINUS_TOK f_exp f_exp CLOSE_PAREN
   88      | OPEN_PAREN MU_TOK f_exp f_exp CLOSE_PAREN
   89      | OPEN_PAREN DI_TOK f_exp f_exp CLOSE_PAREN

   90 literal_term: OPEN_PAREN dis_NOT_TOK atomic_formula_term CLOSE_PAREN
   91             | atomic_formula_term

   92 atomic_formula_term: OPEN_PAREN predicate term_star CLOSE_PAREN
   93                    | OPEN_PAREN EQ_TOK term_star CLOSE_PAREN

   94 term_star: %empty
   95          | term term_star

   96 term: NAME
   97     | VARIABLE

   98 name_plus: NAME
   99          | NAME name_plus

  100 predicate: NAME

  101 typed_list_name: %empty
  102                | NAME EITHER_TOK name_plus CLOSE_PAREN typed_list_name
  103                | NAME MINUS_TOK NAME typed_list_name
  104                | NAME typed_list_name

  105 typed_list_variable: %empty
  106                    | VARIABLE EITHER_TOK name_plus CLOSE_PAREN typed_list_variable
  107                    | VARIABLE MINUS_TOK NAME typed_list_variable
  108                    | VARIABLE typed_list_variable

  109 $@15: %empty

  110 $@16: %empty

  111 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK $@15 NAME $@16 param_def durative_action_def_body CLOSE_PAREN

  112 $@17: %empty

  113 $@18: %empty

  114 durative_action_def_body: DURATION_TOK duration_constraint $@17 CONDITION_TOK da_GD $@18 EFFECT_TOK da_adl_effect

  115 da_GD: OPEN_PAREN CLOSE_PAREN
  116      | pref_timed_GD
  117      | OPEN_PAREN dis_AND_TOK da_GD_star CLOSE_PAREN
  118      | OPEN_PAREN Fdis_ORdis_ALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN da_GD CLOSE_PAREN

  119 da_GD_star: %empty
  120           | da_GD da_GD_star

  121 pref_timed_GD: timed_adl_goal_description

  122 da_adl_goal_description: timed_adl_goal_description
  123                        | OPEN_PAREN dis_AND_TOK timed_adl_goal_description_plus CLOSE_PAREN

  124 timed_adl_goal_description_plus: timed_adl_goal_description
  125                                | timed_adl_goal_description timed_adl_goal_description_plus

  126 timed_adl_goal_description: OPEN_PAREN AT_START adl_goal_description CLOSE_PAREN
  127                           | OPEN_PAREN AT_END adl_goal_description CLOSE_PAREN
  128                           | OPEN_PAREN OVER_ALL adl_goal_description CLOSE_PAREN

  129 duration_constraint: OPEN_PAREN EQ_TOK DURATION_VAR_TOK f_exp CLOSE_PAREN

  130 da_adl_effect: OPEN_PAREN CLOSE_PAREN
  131              | OPEN_PAREN dis_AND_TOK timed_adl_effect_plus CLOSE_PAREN
  132              | timed_adl_effect
  133              | OPEN_PAREN Fdis_ORdis_ALL_TOK OPEN_PAREN typed_list_variable CLOSE_PAREN da_adl_effect CLOSE_PAREN
  134              | OPEN_PAREN dis_WHEN_TOK da_adl_goal_description timed_adl_effect CLOSE_PAREN
  135              | OPEN_PAREN ASSIGN_TOK f_head f_exp_da CLOSE_PAREN
  136              | OPEN_PAREN SCALE_UP_TOK f_head f_exp_da CLOSE_PAREN
  137              | OPEN_PAREN SCALE_DOWN_TOK f_head f_exp_da CLOSE_PAREN
  138              | OPEN_PAREN INCREASE_TOK f_head f_exp_da CLOSE_PAREN
  139              | OPEN_PAREN DECREASE_TOK f_head f_exp_da CLOSE_PAREN

  140 timed_adl_effect_plus: timed_adl_effect
  141                      | timed_adl_effect timed_adl_effect_plus

  142 timed_adl_effect: OPEN_PAREN AT_START adl_effect CLOSE_PAREN
  143                 | OPEN_PAREN AT_END adl_effect CLOSE_PAREN
  144                 | OPEN_PAREN AT_START f_assign_da CLOSE_PAREN
  145                 | OPEN_PAREN AT_END f_assign_da CLOSE_PAREN

  146 f_assign_da: OPEN_PAREN ASSIGN_TOK f_head f_exp_da CLOSE_PAREN
  147            | OPEN_PAREN SCALE_UP_TOK f_head f_exp_da CLOSE_PAREN
  148            | OPEN_PAREN SCALE_DOWN_TOK f_head f_exp_da CLOSE_PAREN
  149            | OPEN_PAREN INCREASE_TOK f_head f_exp_da CLOSE_PAREN
  150            | OPEN_PAREN DECREASE_TOK f_head f_exp_da CLOSE_PAREN

  151 f_exp_da: OPEN_PAREN AD_TOK f_exp_da f_exp_da CLOSE_PAREN
  152         | OPEN_PAREN MINUS_TOK f_exp_da f_exp_da CLOSE_PAREN
  153         | OPEN_PAREN MU_TOK f_exp_da f_exp_da CLOSE_PAREN
  154         | OPEN_PAREN DI_TOK f_exp_da f_exp_da CLOSE_PAREN
  155         | OPEN_PAREN MINUS_TOK f_exp_da CLOSE_PAREN
  156         | DURATION_VAR_TOK
  157         | f_exp


Terminals, with rules where they appear

$end (0) 0
error (256)
DEFINE_TOK (258) 4
DOMAIN_TOK (259) 5
REQUIREMENTS_TOK (260) 29
TYPES_TOK (261) 34
EITHER_TOK (262) 102 106
CONSTANTS_TOK (263) 36
PREDICATES_TOK (264) 16
FUNCTIONS_TOK (265) 21
ACTION_TOK (266) 39
VARS_TOK (267) 43
IMPLIES_TOK (268)
PRECONDITION_TOK (269) 45
PARAMETERS_TOK (270) 41
EFFECT_TOK (271) 47 114
dis_AND_TOK (272) 50 57 77 117 123 131
dis_NOT_TOK (273) 66 90
dis_WHEN_TOK (274) 79 134
Fdis_ORdis_ALL_TOK (275) 51 58 78 118 133
IMPLY_TOK (276) 67
dis_OR_TOK (277) 65
dis_EXISTS_TOK (278) 68
LE_TOK (279) 59
LEQ_TOK (280) 60
EQ_TOK (281) 61 93 129
GEQ_TOK (282) 62
GE_TOK (283) 63
MINUS_TOK (284) 22 85 87 103 107 152 155
AD_TOK (285) 86 151
MU_TOK (286) 88 153
DI_TOK (287) 89 154
ASSIGN_TOK (288) 71 135 146
SCALE_UP_TOK (289) 72 136 147
SCALE_DOWN_TOK (290) 73 137 148
INCREASE_TOK (291) 74 138 149
DECREASE_TOK (292) 75 139 150
NAME (293) 5 19 22 25 26 29 32 39 82 96 98 99 100 102 103 104 107 111
VARIABLE (294) 97 106 107 108
NUM (295) 83
OPEN_PAREN (296) 4 5 16 19 21 25 26 29 34 36 39 41 43 48 50 51 55 57
    58 59 60 61 62 63 65 66 67 68 71 72 73 74 75 77 78 79 82 85 86
    87 88 89 90 92 93 111 115 117 118 123 126 127 128 129 130 131 133
    134 135 136 137 138 139 142 143 144 145 146 147 148 149 150 151
    152 153 154 155
CLOSE_PAREN (297) 5 6 16 19 21 25 26 29 34 36 39 41 43 48 50 51 55
    57 58 59 60 61 62 63 65 66 67 68 71 72 73 74 75 77 78 79 82 85
    86 87 88 89 90 92 93 102 106 111 115 117 118 123 126 127 128 129
    130 131 133 134 135 136 137 138 139 142 143 144 145 146 147 148
    149 150 151 152 153 154 155
AT_START (298) 126 142 144
AT_END (299) 127 143 145
OVER_ALL (300) 128
DURATION_TOK (301) 114
DURATIVE_ACTION_TOK (302) 111
DURATION_VAR_TOK (303) 129 156
CONDITION_TOK (304) 114
TIME_TOK (305)
DERIVED_TOK (306) 55
PLUS_TOK (307)
MUL_TOK (308)
DIV_TOK (309)
UMINUS (310)


Nonterminals, with rules where they appear

$accept (56)
    左： 0
file (57)
    左： 2, 右： 0
$@1 (58)
    左： 1, 右： 2
domain_definition (59)
    左： 4, 右： 2
$@2 (60)
    左： 3, 右： 4
domain_name (61)
    左： 5, 右： 4
optional_domain_defs (62)
    左： 6 7 8 9 10 11 12 13 14, 右： 4 7 8 9 10 11 12 13 14
predicates_def (63)
    左： 16, 右： 10
$@3 (64)
    左： 15, 右： 16
predicates_list (65)
    左： 17 19, 右： 16 19
$@4 (66)
    左： 18, 右： 19
functions_def (67)
    左： 21, 右： 11
$@5 (68)
    左： 20, 右： 21
functions_list (69)
    左： 22 23 24, 右： 21 22
atomic_function_skeleton_plus (70)
    左： 25 26, 右： 22 23 25
require_def (71)
    左： 29, 右： 7
$@6 (72)
    左： 27, 右： 29
$@7 (73)
    左： 28, 右： 29
require_key_star (74)
    左： 30 32, 右： 29 32
$@8 (75)
    左： 31, 右： 32
types_def (76)
    左： 34, 右： 9
$@9 (77)
    左： 33, 右： 34
constants_def (78)
    左： 36, 右： 8
$@10 (79)
    左： 35, 右： 36
action_def (80)
    左： 39, 右： 12
$@11 (81)
    左： 37, 右： 39
$@12 (82)
    左： 38, 右： 39
param_def (83)
    左： 40 41, 右： 39 111
action_def_body (84)
    左： 42 43 45 47, 右： 39 43 45 47
$@13 (85)
    左： 44, 右： 45
$@14 (86)
    左： 46, 右： 47
pre_GD (87)
    左： 48 49 50 51, 右： 45 51 53
pre_GD_star (88)
    左： 52 53, 右： 50 53
pref_GD (89)
    左： 54, 右： 49
derived_def (90)
    左： 55, 右： 14
adl_goal_description (91)
    左： 56 57 58, 右： 55 66 67 68 70 79 126 127 128
adl_goal_description1 (92)
    左： 59 60 61 62 63 64 65 66 67 68, 右： 54 56 58
adl_goal_description_star (93)
    左： 69 70, 右： 57 65 70
adl_effect (94)
    左： 71 72 73 74 75 76 77 78 79, 右： 47 78 79 81 142 143
adl_effect_star (95)
    左： 80 81, 右： 77 81
f_head (96)
    左： 82, 右： 71 72 73 74 75 84 135 136 137 138 139 146 147
    148 149 150
f_exp (97)
    左： 83 84 85 86 87 88 89, 右： 59 60 61 62 63 71 72 73 74
    75 85 86 87 88 89 129 157
literal_term (98)
    左： 90 91, 右： 64 76
atomic_formula_term (99)
    左： 92 93, 右： 90 91
term_star (100)
    左： 94 95, 右： 82 92 93 95
term (101)
    左： 96 97, 右： 95
name_plus (102)
    左： 98 99, 右： 99 102 106
predicate (103)
    左： 100, 右： 55 92
typed_list_name (104)
    左： 101 102 103 104, 右： 34 36 102 103 104
typed_list_variable (105)
    左： 105 106 107 108, 右： 19 25 26 41 43 51 55 58 68 78 106
    107 108 118 133
durative_action_def (106)
    左： 111, 右： 13
$@15 (107)
    左： 109, 右： 111
$@16 (108)
    左： 110, 右： 111
durative_action_def_body (109)
    左： 114, 右： 111
$@17 (110)
    左： 112, 右： 114
$@18 (111)
    左： 113, 右： 114
da_GD (112)
    左： 115 116 117 118, 右： 114 118 120
da_GD_star (113)
    左： 119 120, 右： 117 120
pref_timed_GD (114)
    左： 121, 右： 116
da_adl_goal_description (115)
    左： 122 123, 右： 134
timed_adl_goal_description_plus (116)
    左： 124 125, 右： 123 125
timed_adl_goal_description (117)
    左： 126 127 128, 右： 121 122 124 125
duration_constraint (118)
    左： 129, 右： 114
da_adl_effect (119)
    左： 130 131 132 133 134 135 136 137 138 139, 右： 114 133
timed_adl_effect_plus (120)
    左： 140 141, 右： 131 141
timed_adl_effect (121)
    左： 142 143 144 145, 右： 132 134 140 141
f_assign_da (122)
    左： 146 147 148 149 150, 右： 144 145
f_exp_da (123)
    左： 151 152 153 154 155 156 157, 右： 135 136 137 138 139
    146 147 148 149 150 151 152 153 154 155


State 0

    0 $accept: . file $end

    $default  reduce using rule 1 ($@1)

    file  转到状态 1
    $@1   转到状态 2


State 1

    0 $accept: file . $end

    $end  shift, and go to state 3


State 2

    2 file: $@1 . domain_definition

    OPEN_PAREN  shift, and go to state 4

    domain_definition  转到状态 5


State 3

    0 $accept: file $end .

    $default  接受


State 4

    4 domain_definition: OPEN_PAREN . DEFINE_TOK domain_name $@2 optional_domain_defs

    DEFINE_TOK  shift, and go to state 6


State 5

    2 file: $@1 domain_definition .

    $default  reduce using rule 2 (file)


State 6

    4 domain_definition: OPEN_PAREN DEFINE_TOK . domain_name $@2 optional_domain_defs

    OPEN_PAREN  shift, and go to state 7

    domain_name  转到状态 8


State 7

    5 domain_name: OPEN_PAREN . DOMAIN_TOK NAME CLOSE_PAREN

    DOMAIN_TOK  shift, and go to state 9


State 8

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name . $@2 optional_domain_defs

    $default  reduce using rule 3 ($@2)

    $@2  转到状态 10


State 9

    5 domain_name: OPEN_PAREN DOMAIN_TOK . NAME CLOSE_PAREN

    NAME  shift, and go to state 11


State 10

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name $@2 . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  转到状态 14
    predicates_def        转到状态 15
    functions_def         转到状态 16
    require_def           转到状态 17
    types_def             转到状态 18
    constants_def         转到状态 19
    action_def            转到状态 20
    derived_def           转到状态 21
    durative_action_def   转到状态 22


State 11

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 23


State 12

   16 predicates_def: OPEN_PAREN . PREDICATES_TOK predicates_list $@3 CLOSE_PAREN
   21 functions_def: OPEN_PAREN . FUNCTIONS_TOK functions_list $@5 CLOSE_PAREN
   29 require_def: OPEN_PAREN . REQUIREMENTS_TOK $@6 NAME $@7 require_key_star CLOSE_PAREN
   34 types_def: OPEN_PAREN . TYPES_TOK $@9 typed_list_name CLOSE_PAREN
   36 constants_def: OPEN_PAREN . CONSTANTS_TOK $@10 typed_list_name CLOSE_PAREN
   39 action_def: OPEN_PAREN . ACTION_TOK $@11 NAME $@12 param_def action_def_body CLOSE_PAREN
   55 derived_def: OPEN_PAREN . DERIVED_TOK OPEN_PAREN predicate typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN
  111 durative_action_def: OPEN_PAREN . DURATIVE_ACTION_TOK $@15 NAME $@16 param_def durative_action_def_body CLOSE_PAREN

    REQUIREMENTS_TOK     shift, and go to state 24
    TYPES_TOK            shift, and go to state 25
    CONSTANTS_TOK        shift, and go to state 26
    PREDICATES_TOK       shift, and go to state 27
    FUNCTIONS_TOK        shift, and go to state 28
    ACTION_TOK           shift, and go to state 29
    DURATIVE_ACTION_TOK  shift, and go to state 30
    DERIVED_TOK          shift, and go to state 31


State 13

    6 optional_domain_defs: CLOSE_PAREN .

    $default  reduce using rule 6 (optional_domain_defs)


State 14

    4 domain_definition: OPEN_PAREN DEFINE_TOK domain_name $@2 optional_domain_defs .

    $default  reduce using rule 4 (domain_definition)


State 15

   10 optional_domain_defs: predicates_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  转到状态 32
    predicates_def        转到状态 15
    functions_def         转到状态 16
    require_def           转到状态 17
    types_def             转到状态 18
    constants_def         转到状态 19
    action_def            转到状态 20
    derived_def           转到状态 21
    durative_action_def   转到状态 22


State 16

   11 optional_domain_defs: functions_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  转到状态 33
    predicates_def        转到状态 15
    functions_def         转到状态 16
    require_def           转到状态 17
    types_def             转到状态 18
    constants_def         转到状态 19
    action_def            转到状态 20
    derived_def           转到状态 21
    durative_action_def   转到状态 22


State 17

    7 optional_domain_defs: require_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  转到状态 34
    predicates_def        转到状态 15
    functions_def         转到状态 16
    require_def           转到状态 17
    types_def             转到状态 18
    constants_def         转到状态 19
    action_def            转到状态 20
    derived_def           转到状态 21
    durative_action_def   转到状态 22


State 18

    9 optional_domain_defs: types_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  转到状态 35
    predicates_def        转到状态 15
    functions_def         转到状态 16
    require_def           转到状态 17
    types_def             转到状态 18
    constants_def         转到状态 19
    action_def            转到状态 20
    derived_def           转到状态 21
    durative_action_def   转到状态 22


State 19

    8 optional_domain_defs: constants_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  转到状态 36
    predicates_def        转到状态 15
    functions_def         转到状态 16
    require_def           转到状态 17
    types_def             转到状态 18
    constants_def         转到状态 19
    action_def            转到状态 20
    derived_def           转到状态 21
    durative_action_def   转到状态 22


State 20

   12 optional_domain_defs: action_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  转到状态 37
    predicates_def        转到状态 15
    functions_def         转到状态 16
    require_def           转到状态 17
    types_def             转到状态 18
    constants_def         转到状态 19
    action_def            转到状态 20
    derived_def           转到状态 21
    durative_action_def   转到状态 22


State 21

   14 optional_domain_defs: derived_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  转到状态 38
    predicates_def        转到状态 15
    functions_def         转到状态 16
    require_def           转到状态 17
    types_def             转到状态 18
    constants_def         转到状态 19
    action_def            转到状态 20
    derived_def           转到状态 21
    durative_action_def   转到状态 22


State 22

   13 optional_domain_defs: durative_action_def . optional_domain_defs

    OPEN_PAREN   shift, and go to state 12
    CLOSE_PAREN  shift, and go to state 13

    optional_domain_defs  转到状态 39
    predicates_def        转到状态 15
    functions_def         转到状态 16
    require_def           转到状态 17
    types_def             转到状态 18
    constants_def         转到状态 19
    action_def            转到状态 20
    derived_def           转到状态 21
    durative_action_def   转到状态 22


State 23

    5 domain_name: OPEN_PAREN DOMAIN_TOK NAME CLOSE_PAREN .

    $default  reduce using rule 5 (domain_name)


State 24

   29 require_def: OPEN_PAREN REQUIREMENTS_TOK . $@6 NAME $@7 require_key_star CLOSE_PAREN

    $default  reduce using rule 27 ($@6)

    $@6  转到状态 40


State 25

   34 types_def: OPEN_PAREN TYPES_TOK . $@9 typed_list_name CLOSE_PAREN

    $default  reduce using rule 33 ($@9)

    $@9  转到状态 41


State 26

   36 constants_def: OPEN_PAREN CONSTANTS_TOK . $@10 typed_list_name CLOSE_PAREN

    $default  reduce using rule 35 ($@10)

    $@10  转到状态 42


State 27

   16 predicates_def: OPEN_PAREN PREDICATES_TOK . predicates_list $@3 CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 43

    $default  reduce using rule 17 (predicates_list)

    predicates_list  转到状态 44


State 28

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK . functions_list $@5 CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 45

    $default  reduce using rule 24 (functions_list)

    functions_list                 转到状态 46
    atomic_function_skeleton_plus  转到状态 47


State 29

   39 action_def: OPEN_PAREN ACTION_TOK . $@11 NAME $@12 param_def action_def_body CLOSE_PAREN

    $default  reduce using rule 37 ($@11)

    $@11  转到状态 48


State 30

  111 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK . $@15 NAME $@16 param_def durative_action_def_body CLOSE_PAREN

    $default  reduce using rule 109 ($@15)

    $@15  转到状态 49


State 31

   55 derived_def: OPEN_PAREN DERIVED_TOK . OPEN_PAREN predicate typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN

    OPEN_PAREN  shift, and go to state 50


State 32

   10 optional_domain_defs: predicates_def optional_domain_defs .

    $default  reduce using rule 10 (optional_domain_defs)


State 33

   11 optional_domain_defs: functions_def optional_domain_defs .

    $default  reduce using rule 11 (optional_domain_defs)


State 34

    7 optional_domain_defs: require_def optional_domain_defs .

    $default  reduce using rule 7 (optional_domain_defs)


State 35

    9 optional_domain_defs: types_def optional_domain_defs .

    $default  reduce using rule 9 (optional_domain_defs)


State 36

    8 optional_domain_defs: constants_def optional_domain_defs .

    $default  reduce using rule 8 (optional_domain_defs)


State 37

   12 optional_domain_defs: action_def optional_domain_defs .

    $default  reduce using rule 12 (optional_domain_defs)


State 38

   14 optional_domain_defs: derived_def optional_domain_defs .

    $default  reduce using rule 14 (optional_domain_defs)


State 39

   13 optional_domain_defs: durative_action_def optional_domain_defs .

    $default  reduce using rule 13 (optional_domain_defs)


State 40

   29 require_def: OPEN_PAREN REQUIREMENTS_TOK $@6 . NAME $@7 require_key_star CLOSE_PAREN

    NAME  shift, and go to state 51


State 41

   34 types_def: OPEN_PAREN TYPES_TOK $@9 . typed_list_name CLOSE_PAREN

    NAME  shift, and go to state 52

    $default  reduce using rule 101 (typed_list_name)

    typed_list_name  转到状态 53


State 42

   36 constants_def: OPEN_PAREN CONSTANTS_TOK $@10 . typed_list_name CLOSE_PAREN

    NAME  shift, and go to state 52

    $default  reduce using rule 101 (typed_list_name)

    typed_list_name  转到状态 54


State 43

   19 predicates_list: OPEN_PAREN . NAME typed_list_variable CLOSE_PAREN $@4 predicates_list

    NAME  shift, and go to state 55


State 44

   16 predicates_def: OPEN_PAREN PREDICATES_TOK predicates_list . $@3 CLOSE_PAREN

    $default  reduce using rule 15 ($@3)

    $@3  转到状态 56


State 45

   25 atomic_function_skeleton_plus: OPEN_PAREN . NAME typed_list_variable CLOSE_PAREN atomic_function_skeleton_plus
   26                              | OPEN_PAREN . NAME typed_list_variable CLOSE_PAREN

    NAME  shift, and go to state 57


State 46

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK functions_list . $@5 CLOSE_PAREN

    $default  reduce using rule 20 ($@5)

    $@5  转到状态 58


State 47

   22 functions_list: atomic_function_skeleton_plus . MINUS_TOK NAME functions_list
   23               | atomic_function_skeleton_plus .

    MINUS_TOK  shift, and go to state 59

    $default  reduce using rule 23 (functions_list)


State 48

   39 action_def: OPEN_PAREN ACTION_TOK $@11 . NAME $@12 param_def action_def_body CLOSE_PAREN

    NAME  shift, and go to state 60


State 49

  111 durative_action_def: OPEN_PAREN DURATIVE_ACTION_TOK $@15 . NAME $@16 param_def durative_action_def_body CLOSE_PAREN

    NAME  shift, and go to state 61


State 50

   55 derived_def: OPEN_PAREN DERIVED_TOK OPEN_PAREN . predicate typed_list_variable CLOSE_PAREN adl_goal_description CLOSE_PAREN

    NAME  shift, and go to state 62

    predicate  转到状态 63


State 51

   29 require_def: OPEN_PAREN REQUIREMENTS_TOK $@6 NAME . $@7 require_key_star CLOSE_PAREN

    $default  reduce using rule 28 ($@7)

    $@7  转到状态 64


State 52

  102 typed_list_name: NAME . EITHER_TOK name_plus CLOSE_PAREN typed_list_name
  103                | NAME . MINUS_TOK NAME typed_list_name
  104                | NAME . typed_list_name

    EITHER_TOK  shift, and go to state 65
    MINUS_TOK   shift, and go to state 66
    NAME        shift, and go to state 52

    $default  reduce using rule 101 (typed_list_name)

    typed_list_name  转到状态 67


State 53

   34 types_def: OPEN_PAREN TYPES_TOK $@9 typed_list_name . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 68


State 54

   36 constants_def: OPEN_PAREN CONSTANTS_TOK $@10 typed_list_name . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 69


State 55

   19 predicates_list: OPEN_PAREN NAME . typed_list_variable CLOSE_PAREN $@4 predicates_list

    VARIABLE  shift, and go to state 70

    $default  reduce using rule 105 (typed_list_variable)

    typed_list_variable  转到状态 71


State 56

   16 predicates_def: OPEN_PAREN PREDICATES_TOK predicates_list $@3 . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 72


State 57

   25 atomic_function_skeleton_plus: OPEN_PAREN NAME . typed_list_variable CLOSE_PAREN atomic_function_skeleton_plus
   26                              | OPEN_PAREN NAME . typed_list_variable CLOSE_PAREN

    VARIABLE  shift, and go to state 70

    $default  reduce using rule 105 (typed_list_variable)

    typed_list_variable  转到状态 73


State 58

   21 functions_def: OPEN_PAREN FUNCTIONS_TOK functions_list $@5 . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 74


State 59

   22 functions_list: atomic_function_skeleton_plus MINUS_TOK . NAME functions_list

    NAME  shift, and go to state 75


State 60

   39 action_def: OPEN_PAREN ACTION_TOK $@11 NAME . $@12 param_def action_def_body CLOSE_PAREN
